# sp_midi

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  azure-pipelines.yml
.github/workflows/: cmake.yml
JuceLibraryCode/: AppConfig.h  AppConfig.h.bak
src/: hotplug_thread.h  message_thread.h  midi_port_info.h  midicommon.cpp  midicommon.h  midiin.cpp  midiin.h  midiinprocessor.cpp  midiinprocessor.h  midiinputs.cpp  midiinputs.h  midiout.cpp  midiout.h  midisendprocessor.cpp  midisendprocessor.h  monitorlogger.h  oscinprocessor.cpp  oscinprocessor.h  scheduler_callback_thread.h  sp_midi.cpp  sp_midi.erl  sp_midi.h  sp_midi_m2o.cpp  sp_midi_o2m.cpp  sp_midi_o2m.cpp~RF9f37431.TMP  sp_midi_test.c  sp_midi_test.erl
